--- a/ui/sections/network/inspectors/overview.reel/interface-overview-item.reel/interface-overview-item.html
+++ b/ui/sections/network/inspectors/overview.reel/interface-overview-item.reel/interface-overview-item.html
@@ -8,7 +8,16 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"}
-            }
+            },
+            "bindings": {
+                "classList.has('is-expanded')": {"<-": "@owner.isExpanded"}
+            },
+            "listeners": [
+                {
+                    "listener": {"@": "owner"},
+                    "type": "action"
+                }
+            ]
         },
         "interfaceName": {
             "prototype": "montage/ui/text.reel",
@@ -19,13 +28,22 @@
                 "value": {"<-": "@owner.object.path(@owner.object.Type.constructor.userInterfaceDescriptor.nameExpression)"}
             }
         },
+        "firstAddress": {
+            "prototype": "montage/ui/text.reel",
+            "properties": {
+                "element": {"#": "firstAddress"}
+            },
+            "bindings": {
+                "value": {"<-": "!@owner.object.dhcp ? @owner.object.aliases.filter{type == 'INET' || type == 'INET6'}.map{address}[0] : @owner.object.status.aliases.filter{type == 'INET' || type == 'INET6'}.map{address}[0]"}
+            }
+        },
         "interfaceIpv4Repetition": {
             "prototype": "montage/ui/repetition.reel",
             "properties": {
                 "element": {"#": "interfaceIpv4Repetition"}
             },
             "bindings": {
-                "content": {"<-": "!@owner.object.dhcp ? @owner.object.aliases.filter{type == 'INET'}.map{address} : @owner.object.status.aliases.filter{type == 'INET'}.map{address}"}
+                "content": {"<-": "!@owner.object.dhcp ? @owner.object.aliases.filter{type == 'INET' || type == 'INET6'}.map{address} : @owner.object.status.aliases.filter{type == 'INET' || type == 'INET6'}.map{address}"}
             }
         },
         "interfaceIpv4": {
@@ -37,24 +55,7 @@
                 "value": {"<-": "@interfaceIpv4Repetition:iteration.object"}
             }
         },
-        "interfaceIpv6Repetition": {
-            "prototype": "montage/ui/repetition.reel",
-            "properties": {
-                "element": {"#": "interfaceIpv6Repetition"}
-            },
-            "bindings": {
-                "content": {"<-": "!@owner.object.dhcp ? @owner.object.aliases.filter{type == 'INET6'}.map{address} : @owner.object.status.aliases.filter{type == 'INET6'}.map{address}"}
-            }
-        },
-        "interfaceIpv6": {
-            "prototype": "montage/ui/text.reel",
-            "properties": {
-                "element": {"#": "interfaceIpv6"}
-            },
-            "bindings": {
-                "value": {"<-": "@interfaceIpv6Repetition:iteration.object"}
-            }
-        },
+
         "status": {
             "prototype": "ui/controls/traffic-light.reel",
             "properties": {
@@ -64,24 +65,35 @@
                 "colorMapping": {"<-": "@owner.userInterfaceDescriptor.statusColorMapping"},
                 "value": {"<-": "@owner.object.path(@owner.userInterfaceDescriptor.statusValueExpression)"}
             }
+        },
+        "toggle": {
+            "prototype": "montage/ui/button.reel",
+            "properties": {
+                "element": {"#": "toggle"}
+            },
+            "bindings": {
+                "classList.has('is-hidden')": {"<-": "!@owner.object.dhcp ? !@owner.object.aliases.some{type == 'INET' || type == 'INET6'} : !@owner.object.status.aliases.some{type == 'INET' || type == 'INET6'}"}
+            }
         }
     }
     </script>
 </head>
 <body>
-    <table>
-    <tr data-montage-id="owner" class="InterfaceOverviewItem">
-        <td>
+    <div data-montage-id="owner" class="InterfaceOverviewItem">
+        <div class="InterfaceOverviewItem-overview">
             <div data-montage-id="status" class="InterfaceOverviewItem-status"></div>
             <div data-montage-id="interfaceName" class="InterfaceOverviewItem-name"></div>
-        </td>
-        <td data-montage-id="interfaceIpv4Repetition">
-            <div data-montage-id="interfaceIpv4"></div>
-        </td>
-        <td data-montage-id="interfaceIpv6Repetition" class="ip6Address">
-            <div data-montage-id="interfaceIpv6"></div>
-        </td>
-    </tr>
-    </table>
+            <div data-montage-id="firstAddress" class="InterfaceOverviewItem-firstAddress"></div>
+            <div data-montage-id="toggle" class="InterfaceOverviewItem-toggle">
+                <svg><use xlink:href="#i-triangle-down"/></svg>
+            </div>
+        </div>
+        <div class="InterfaceOverviewItem-details">
+            <div data-montage-id="interfaceIpv4Repetition">
+                <div data-montage-id="interfaceIpv4"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+
