--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -192,13 +192,13 @@
             "properties": {
                 "element": {"#": "weekOptionDay"},
                 "options": [
-                    {"label": "S", "value": "sunday", "index": 0},
-                    {"label": "M", "value": "monday", "index": 1},
-                    {"label": "T", "value": "tuesday", "index": 2},
-                    {"label": "W", "value": "wednesday", "index": 3},
-                    {"label": "Th", "value": "thursday", "index": 4},
-                    {"label": "F", "value": "friday", "index": 5},
-                    {"label": "S", "value": "saturday", "index": 6}
+                    {"label": "S",  "value": 0, "index": 0},
+                    {"label": "M",  "value": 1, "index": 1},
+                    {"label": "T",  "value": 2, "index": 2},
+                    {"label": "W",  "value": 3, "index": 3},
+                    {"label": "Th", "value": 4, "index": 4},
+                    {"label": "F",  "value": 5, "index": 5},
+                    {"label": "S",  "value": 6, "index": 6}
                 ]
             },
             "bindings": {
@@ -231,7 +231,7 @@
                 "element": {"#": "optionTimeCondition"}
             },
             "bindings": {
-                "condition": {"<-": "@scheduleOptions.selectedValue != 'custom'"}
+                "condition": {"<-": "@scheduleOptions.selectedValue != 'CUSTOM'"}
             }
         },
         "optionTime": {
