adds consistent icon to dashbaord widget settings, edits network traffic title Ticket: #17646

--- a/ui/dashboard/widgets/widget.reel/widget.html
+++ b/ui/dashboard/widgets/widget.reel/widget.html
@@ -61,7 +61,10 @@
                 <div data-montage-id="infoWidgetButton" class="Widget-info Button--primary"></div>
             </div>
             <div class="Widget-back">
-                <div data-montage-id="settingsTitle" class="Widget-header"></div>
+                <div class="Widget-header">
+                    <svg><use xlink:href="#i-gear"/></svg>
+                    <div data-montage-id="settingsTitle"></div>
+                </div>
                 <div class="Widget-content">
                     <div data-param="widget-settings" class="Widget-settings"></div>
                     <div class="Widget-footer">
