--- a/ui/widgets/network-traffic.reel/network-traffic.html
+++ b/ui/widgets/network-traffic.reel/network-traffic.html
@@ -17,7 +17,7 @@
             "prototype": "ui/dashboard/widgets/widget.reel",
             "properties": {
                 "element": {"#": "widget"},
-                "settingsLabel": "Network traffic"
+                "settingsLabel": "Network Traffic Settings"
             }
         },
         "text": {
@@ -26,7 +26,7 @@
                 "element": {"#": "title"}
             },
             "bindings": {
-                "value": {"<-": "'Network traffic - ' + @owner.card"}
+                "value": {"<-": "'Network Traffic - ' + @owner.card"}
             }
         },
         "chart": {
