--- a/ui/inspectors/calendar.reel/calendar.html
+++ b/ui/inspectors/calendar.reel/calendar.html
@@ -16,6 +16,7 @@
                 "element": {"#": "calendarWidget"}
             },
             "bindings": {
+                "object": {"<-": "@owner.object"},
                 "taskCategories": {"<-": "@owner.taskCategories"},
                 "selectedPeriod": {"<->": "@owner.selectedPeriod"},
                 "selectedTask": {"<->": "@owner.selectedObject"},
