fixes scrolling bug regression in new settings section
Ticket: #18055

--- a/ui/controls/section.reel/section-settings.reel/section-settings.html
+++ b/ui/controls/section.reel/section-settings.reel/section-settings.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="SectionSettings">
-        <div data-montage-id="settings"></div>
+        <div data-montage-id="settings" class="SectionSettings-content" ></div>
     </div>
 </body>
 </html>
