Fix calendar-task issues

--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -142,7 +142,7 @@
                 "value": "Run Now"
             },
             "bindings": {
-                "disabled": {"<-": "!!@owner.object._isNew"}
+                "disabled": {"<-": "!@owner.object.task"}
             }
         },
         "scheduleResultsHeader": {
