--- a/ui/inspectors/calendar-task.reel/scrub-args.reel/scrub-args.html
+++ b/ui/inspectors/calendar-task.reel/scrub-args.reel/scrub-args.html
@@ -25,7 +25,7 @@
                 "converter": {"@": "optionConverter"}
             },
             "bindings": {
-                "options": {"<-": "@owner.volumes"},
+                "options": {"<-": "[{id: '---'}].concat(@owner.volumes)"},
                 "selectedValue": {"<->": "@owner.args.0"}
             }
         }
