--- a/ui/sections/containers/inspectors/docker-image.reel/docker-image.html
+++ b/ui/sections/containers/inspectors/docker-image.reel/docker-image.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
     <link rel="stylesheet" type="text/css" href="docker-image.css">
     <script type="text/montage-serialization">
     {
@@ -9,12 +8,90 @@
             "properties": {
                 "element": {"#": "owner"}
             }
+        },
+
+        "dateConverter": {
+            "prototype": "montage/core/converter/date-converter",
+            "properties": {
+                "pattern": "MM/dd/yyyy hh:mm:ss tt"
+            }
+        },
+        
+        "inspector": {
+            "prototype": "ui/inspectors/inspector.reel",
+            "properties": {
+                "element": {"#": "inspector"},
+                "canSave": false,
+                "canRevert": false,
+                "canDelete": true,
+                "controller": {"@": "owner"}
+            },
+            "bindings": {
+                "context": {"<-": "@owner.context"}
+            }
+        },
+
+        "collection": {
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "element": {"#": "collection"},
+                "label": "Collection"
+            },
+            "bindings": {
+                "value": {"<-": "@owner.object.collection"},
+                "classList.has('is-hidden')": {"<-": "!@owner.object.collection"}
+            }
+        },
+
+        "name": {
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "element": {"#": "name"},
+                "label": "Name"
+            },
+            "bindings": {
+                "value": {"<-": "@owner.object.names.join(' ')"}
+            }
+        },
+
+        "bytesConverter": {
+            "prototype": "montage/core/converter/bytes-converter"
+        },
+
+        "size": {
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "element": {"#": "size"},
+                "label": "Size",
+                "converter": {"@": "bytesConverter"}
+            },
+            "bindings": {
+                "value": {"<-": "@owner.object.size"}
+            }
+        },
+
+        "createdAt": {
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "element": {"#": "createdAt"},
+                "label": "Created At",
+                "converter": {"@": "dateConverter"}
+            },
+            "bindings": {
+                "value": {"<-": "@owner.createdAtDate"}
+            }
         }
     }
     </script>
 </head>
 <body>
     <div data-montage-id="owner" class="DockerImage">
+        <div data-montage-id="inspector">
+            <div data-montage-id="collection"></div>
+            <div data-montage-id="name"></div>
+            <div data-montage-id="size"></div>
+            <div data-montage-id="createdAt"></div>
+        </div>
     </div>
 </body>
 </html>
