Make time to be displayed in 24H format in calendar task

--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -231,8 +231,7 @@
             "properties": {
                 "element": {"#": "optionTime"},
                 "intervalInSeconds": 1800,
-                "enabled": false,
-                "pattern": "hh:mm"
+                "pattern": "HH:mm"
             },
             "bindings": {
                 "value": {"<->": "@owner.object._simpleSchedule.time"}
