--- a/ui/sections/network/inspectors/network-interface.reel/network-interface.html
+++ b/ui/sections/network/inspectors/network-interface.reel/network-interface.html
@@ -143,7 +143,7 @@
                 "element": {"#": "interfaceTypeSubstitution"}
             },
             "bindings": {
-                "switchValue": {"<-": "@owner.interfaceType"}
+                "switchValue": {"<-": "@owner.object.type"}
             }
         },
         "ether": {
