ADDED: certificate HTML

--- a/ui/inspectors/system-section.reel/system-section.html
+++ b/ui/inspectors/system-section.reel/system-section.html
@@ -17,6 +17,7 @@
                     "serialConsole": {"@": "serialConsole"},
                     "debug": {"@": "debug"},
                     "mail": {"@": "mail"},
+                    "certificates": {"@": "certificates"},
                     "dockerSettings": {"@": "dockerSettings"},
                     "tunable": {"@": "tunable"}
                 }
@@ -134,6 +135,15 @@
                 "element": {"#": "system"}
             }
         },
+        "certificates": {
+            "prototype": "./certificates.reel",
+            "properties": {
+                "element": {"#": "certificates"}
+            },
+            "bindings": {
+                "object": {"<-": "@owner.certificates"}
+            }
+        },
         "tunable": {
             "prototype": "./tunable.reel",
             "properties": {
@@ -163,6 +173,7 @@
                 <div data-montage-id="dateAndTime" data-arg="dateAndTime"></div>
                 <div data-montage-id="languageAndRegion" data-arg="languageAndRegion"></div>
                 <div data-montage-id="system" data-arg="system"></div>
+                <div data-montage-id="certificates" data-arg="certificates"></div>
                 <div data-montage-id="dockerSettings" data-arg="dockerSettings"></div>
                 <div data-montage-id="powerManagement" data-arg="powerManagement"></div>
                 <div data-montage-id="serialConsole" data-arg="serialConsole"></div>
