--- a/ui/inspectors/service.reel/ftp-service.reel/ftp-service.html
+++ b/ui/inspectors/service.reel/ftp-service.reel/ftp-service.html
@@ -9,12 +9,255 @@
             "properties": {
                 "element": {"#": "owner"}
             }
+        },
+        "portValidator": {
+            "prototype": "core/converter/validator/integer-range-validator",
+            "properties": {
+                "floor": 1,
+                "ceiling": 65535,
+                "errorMessage": "Value must be an integer between 1 and 65535"
+            }
+        },
+        "portConverter": {
+            "prototype": "core/converter/string-to-integer-converter",
+            "properties": {
+                "validator": {"@": "portValidator"}
+            }
+        },
+        "port": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "port"},
+                "label": "Port",
+                "converter": {"@": "portConverter"}
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.port"}
+            }
+        },
+        "maxClientsValidator": {
+            "prototype": "core/converter/validator/integer-range-validator",
+            "properties": {
+                "floor": 0,
+                "ceiling": 10000,
+                "errorMessage": "Value must be an integer between 0 and 10000"
+            }
+        },
+        "maxClientsConverter": {
+            "prototype": "core/converter/string-to-integer-converter",
+            "properties": {
+                "validator": {"@": "maxClientsValidator"}
+            }
+        },
+        "max_clients": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "max_clients"},
+                "label": "Clients",
+                "converter": {"@": "maxClientsConverter"}
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.max_clients"}
+            }
+        },
+        "ipConnectionsValidator": {
+            "prototype": "core/converter/validator/integer-range-validator",
+            "properties": {
+                "floor": 0,
+                "ceiling": 1000,
+                "errorMessage": "Value must be an integer between 0 and 1000"
+            }
+        },
+        "ipConnectionsConverter": {
+            "prototype": "core/converter/string-to-integer-or-null-converter",
+            "properties": {
+                "validator": {"@": "ipConnectionsValidator"}
+            }
+        },
+        "ip_connections": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "ip_connections"},
+                "label": "Connections",
+                "converter": {"@": "ipConnectionsConverter"}
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.ip_connections"}
+            }
+        },
+        "loginAttemptValidator": {
+            "prototype": "core/converter/validator/integer-range-validator",
+            "properties": {
+                "floor": 0,
+                "ceiling": 1000,
+                "errorMessage": "Value must be an integer between 0 and 1000"
+            }
+        },
+        "loginAttemptConverter": {
+            "prototype": "core/converter/string-to-integer-converter",
+            "properties": {
+                "validator": {"@": "loginAttemptValidator"}
+            }
+        },
+        "login_attempt": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "login_attempt"},
+                "label": "Login Attempts",
+                "converter": {"@": "loginAttemptConverter"}
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.login_attempt"}
+            }
+        },
+        "timeoutValidator": {
+            "prototype": "core/converter/validator/integer-range-validator",
+            "properties": {
+                "floor": 0,
+                "ceiling": 10000,
+                "errorMessage": "Value must be an integer between 0 and 10000"
+            }
+        },
+        "timeoutConverter": {
+            "prototype": "core/converter/string-to-integer-converter",
+            "properties": {
+                "validator": {"@": "timeoutValidator"}
+            }
+        },
+        "timeout": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "timeout"},
+                "label": "Timeout",
+                "converter": {"@": "timeoutConverter"}
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.timeout"}
+            }
+        },
+        "root_login": {
+            "prototype": "blue-shark/ui/field-checkbox.reel",
+            "properties": {
+                "element": {"#": "root_login"},
+                "label": "Allow Root Login"
+            },
+            "bindings": {
+                "checked": {"<->": "@owner.object.root_login"}
+            }
+        },
+        "only_anonymous": {
+            "prototype": "blue-shark/ui/field-checkbox.reel",
+            "properties": {
+                "element": {"#": "only_anonymous"},
+                "label": "Allow Anonymous Login"
+            },
+            "bindings": {
+                "checked": {"<->": "@owner.object.only_anonymous"}
+            }
+        },
+        "filesystemTreeController": {
+            "prototype": "core/controller/filesystem-tree-controller",
+            "properties": {
+                "canListFiles": false,
+                "root": "/mnt"
+            },
+            "bindings": {
+                "service": {"<-": "@owner.application.filesystemService"}
+            }
+        },
+        "anonymous_path": {
+            "prototype": "ui/controls/field-treeview.reel",
+            "properties": {
+                "element": {"#": "anonymous_path"},
+                "controller": {"@": "filesystemTreeController"},
+                "validationPath": "anonymous_path",
+                "label": "Anonymous Path"
+            },
+            "bindings": {
+                "disabled": {"<-": "!@owner.object.only_anonymous"},
+                "selectedPath": {"<->": "@owner.object.anonymous_path"}
+            }
+        },
+        "only_local": {
+            "prototype": "blue-shark/ui/field-checkbox.reel",
+            "properties": {
+                "element": {"#": "only_local"},
+                "label": "Allow Local User Login"
+            },
+            "bindings": {
+                "checked": {"<->": "@owner.object.only_local"}
+            }
+        },
+        "display_login": {
+            "prototype": "blue-shark/ui/field-text-area.reel",
+            "properties": {
+                "element": {"#": "display_login"},
+                "validationPath": "display_login",
+                "label": "Display Login"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.display_login"}
+            }
+        },
+        "resume": {
+            "prototype": "blue-shark/ui/field-checkbox.reel",
+            "properties": {
+                "element": {"#": "resume"},
+                "label": "Allow Transfer Resumption"
+            },
+            "bindings": {
+                "checked": {"<->": "@owner.object.resume"}
+            }
+        },
+        "chroot": {
+            "prototype": "blue-shark/ui/field-checkbox.reel",
+            "properties": {
+                "element": {"#": "chroot"},
+                "label": "Always Chroot"
+            },
+            "bindings": {
+                "checked": {"<->": "@owner.object.chroot"}
+            }
+        },
+        "reverse_dns": {
+            "prototype": "blue-shark/ui/field-checkbox.reel",
+            "properties": {
+                "element": {"#": "reverse_dns"},
+                "label": "Perform Reverse DNS Lookups"
+            },
+            "bindings": {
+                "checked": {"<->": "@owner.object.reverse_dns"}
+            }
+        },
+        "masquerade_address": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "masquerade_address"},
+                "label": "Masquerade Address"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.masquerade_address"}
+            }
         }
     }
     </script>
 </head>
 <body>
     <div data-montage-id="owner" class="FtpService">
+        <div data-montage-id="port"></div>
+        <div data-montage-id="max_clients"></div>
+        <div data-montage-id="ip_connections"></div>
+        <div data-montage-id="login_attempt"></div>
+        <div data-montage-id="timeout"></div>
+        <div data-montage-id="root_login"></div>
+        <div data-montage-id="only_anonymous"></div>
+        <div data-montage-id="anonymous_path"></div>
+        <div data-montage-id="only_local"></div>
+        <div data-montage-id="display_login"></div>
+        <div data-montage-id="resume"></div>
+        <div data-montage-id="chroot"></div>
+        <div data-montage-id="reverse_dns"></div>
+        <div data-montage-id="masquerade_address"></div>
     </div>
 </body>
 </html>
