Fix issue with container port property. Display new format and make sure we don’t modify the template defaults.

--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -205,7 +205,7 @@
                 "labelPath": "this"
             },
             "bindings": {
-                "values": {"<-": "@owner.currentTemplate.ports.map{container_port + ':' + host_port + (protocol.defined() ? '/' + protocol : '/TCP')}"}
+                "values": {"<-": "@owner.currentTemplate.ports.map{host_port + ' -> ' + container_port + ' ' + (protocol.defined() ? protocol : 'TCP')} || []"}
             }
         },
 
